--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -65,7 +65,12 @@ Tags: airline , travel company.
 'components/gallery',
 'components/partner',
 'components/counter',
+'components/feature',
+'components/coursedetails',
 'components/cta',
+'components/faq',
+'components/sidebar',
+'components/review',
 'components/newsletter';
 
 // 6. Page-specific styles
