--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -17,8 +17,13 @@ $brand-color-1: #081A28;
 $secondary-color-1:#B1FDAF;
 $tertiary-color-1: #7044B0;
 
-// text colors
+// text colors 
 $brand-bg-1: #CDE5F829;
+$brand1-bg-2: #F7FBFE;
+$brand1-text-1: #299684;
+$rating-color:#ECC132;
+$brand1-text-special: #98A2B3;
+$border-color:#EAECF0;
 //===================== Brand 1 variables  end===================== //
 
 
@@ -27,11 +32,13 @@ $brand-bg-1: #CDE5F829;
 $brand-color-2: #125875;
 $secondary-color-2:#FF7350;
 $tertiary-color-2: #F4BD15;
- 
+
 // text colors
- $brand2-bg-1: #D6F2FE;
+$brand2-bg-1: #D6F2FE;
 $brand2-bg-2: #1F6F90;
 // $text-color-light-2: #667085;
+
+$brand2-bg-4:rgba(214, 242, 254, 0.5);
 //===================== Brand 2 variables  end===================== //
 
 
@@ -42,10 +49,10 @@ $secondary-color-3:#FF7350;
 // $tertiary-color-3: #7044B0;
 
 // text colors
- $brand3-bg-1: #FFF7F5;
- $brand3-bg-2: #0F7494;
- $brand3-bg-3: #F9FAFB;
- $brand3-bg-4: #60468A;
+$brand3-bg-1: #FFF7F5;
+$brand3-bg-2: #0F7494;
+$brand3-bg-3: #F9FAFB;
+$brand3-bg-4: #60468A;
 //===================== Brand 3 variables  end===================== //
 
 
@@ -63,44 +70,13 @@ $brand-bg-4: #F9FAFB;
 
 
 
-// //Template Theme colors
-// $brand-color: #0f7ccf;
-// $primary-color-dark: #023053;
-// $primary-shade:#195F95;
-// $secondary-color:#F3A57D;
-// $secondary-color-2:#B7E7E5;
-// $secondary-color-3:#FCEB8F;
-
-// //Template Text colors
-// $title-color:#101828;
-// $title-color-dark: #231f51;
-// $body-color-dark: #8d85b3;
-// $text-color: #344054;
-// $white-color:#fff;
-// $black-color:#000;
-// $text-color-light:#9DBEDF;
-
-// //Template Accent colors
-// $border-color:#EAECF0;
-
-
-// // Settings for the `<body>` element.
-
-// $body-bg: #F9FAFB;
-// $body-color: #344054;
-
-
-// //Additional Colors:
-// $bg-light-color:#f5f5f6;
-
-
 
 
 //===================== Common Variables =====================//
 
 $body-color: #344054;
 $body-color-dark: #8d85b3;
-
+ 
 // text colors
 $title-color:#101828;
 $text-color: #475467;
@@ -129,14 +105,20 @@ $bg-light-color:#f5f5f6;
 $title-color-dark: #231f51;
 
 
-
+// social
+$facebook: #3D6AD6;
+$twitter:  #1DA1F3;
+$linkedin: #0077B5;
 
 
 
 //Template Font family
-$title-font:'Poppins', sans-serif;
-$title-font1:'Solway', serif;
-$text-font:'Inter', sans-serif;
+$title-font:'Poppins',
+sans-serif;
+$title-font1:'Solway',
+serif;
+$text-font:'Inter',
+sans-serif;
 
 
 //Template font sizes
