--- a/assets/sass/base/_common.scss
+++ b/assets/sass/base/_common.scss
@@ -87,6 +87,91 @@
 }
 
 
+// preloader
+// .preloader {
+//     position: fixed;
+//     top: 0;
+//     left: 0;
+//     z-index: 999999;
+//     width: 100%;
+//     height: 100%;
+//     background: $theme-color;
+//     @extend %hidden;
+
+//     .preloader-inner {
+//         position: absolute;
+//         top: 50%;
+//         left: 50%;
+//         -webkit-transform: translate(-50%, -50%);
+//         transform: translate(-50%, -50%);
+
+//         .preloader-icon {
+//             width: 72px;
+//             height: 72px;
+//             display: inline-block;
+//             padding: 0px;
+
+//             span {
+//                 position: absolute;
+//                 display: inline-block;
+//                 width: 72px;
+//                 height: 72px;
+//                 border-radius: 100%;
+//                 background: #fff;
+//                 -webkit-animation: preloader-fx 1.6s linear infinite;
+//                 animation: preloader-fx 1.6s linear infinite;
+
+//                 &:last-child {
+//                     animation-delay: -0.8s;
+//                     -webkit-animation-delay: -0.8s;
+//                 }
+//             }
+//         }
+//     }
+// }
+
+
+// @keyframes preloader-fx {
+//     0% {
+//         -webkit-transform: scale(0, 0);
+//         transform: scale(0, 0);
+//         opacity: 0.5;
+//     }
+
+//     100% {
+//         -webkit-transform: scale(1, 1);
+//         transform: scale(1, 1);
+//         opacity: 0;
+//     }
+// }
+
+// @-webkit-keyframes preloader-fx {
+//     0% {
+//         -webkit-transform: scale(0, 0);
+//         opacity: 0.5;
+//     }
+
+//     100% {
+//         -webkit-transform: scale(1, 1);
+//         opacity: 0;
+//     }
+// }
+
+// @keyframes price-ani {
+//     0% {
+//         -webkit-transform: scale(1, 1);
+//         transform: scale(1, 1);
+//         opacity: 0.5;
+//     }
+
+//     100% {
+//         -webkit-transform: scale(1.2, 1.2);
+//         transform: scale(1.2, 1.2);
+//         opacity: 0.1;
+//     }
+// }
+
+
 
 // slider pagination
 
@@ -175,8 +260,11 @@
         background-color: $secondary-color-1;
     }
     &--home2{
-        background-color: $secondary-color-2;
-    }
+        background-color: $secondary-color-2; 
+        svg{
+            color: $brand2-bg-2;
+        }
+    } 
     &--home3{
         background-color: $secondary-color-3;
     }
@@ -202,9 +290,10 @@
     textarea {
         @extend %w-100;
         // @include add-prefix(border, 1px solid rgba($theme-color, $alpha:.1));
-        @include add-prefix(border-radius, .5rem);
+        // @include add-prefix(border-radius, .5rem);
         @include add-prefix(transition, $transition);
         // background-color: $body-color;
+        border-radius: 8px;
         color: $text-color;
         padding: 15px 30px;
 
@@ -216,7 +305,9 @@
         }
 
         &::placeholder {
-            color: #B593E8;
+            font-weight: 400;
+            color: rgba($text-color-light, $alpha:.3);
+
         }
 
         &:focus-within {
@@ -239,17 +330,19 @@
 
 
 .form-control {
-    background-color: transparent;
-    border-color: rgba($brand-color-1, $alpha: 0.20);
-    padding: .7rem 1.5rem;
-
+    background-color: $white-color;
+    border-color: $border-color;
+    padding: 15px 24px;
+    border-radius: 8px;
+ 
     @include breakpoint(xl) {
-        padding: 0.8rem 1.25rem;
+        // padding: 0.8rem 1.25rem;
+        padding: 17px 24px;
     }
 
     &:focus {
         box-shadow: none;
-        border-color: $brand-color-1;
+        border-color: rgba($brand-color-1, $alpha: 0.50);
     }
 }
 
