--- a/assets/sass/base/_helpers.scss
+++ b/assets/sass/base/_helpers.scss
@@ -47,8 +47,14 @@
 .brand2-bg-1{
   background-color: $brand2-bg-1;
 }
+.brand2-bg-3{
+  background: rgba($brand2-bg-1, $alpha:.5);
+}
 .brand2-bg-2{
   background-color: $brand2-bg-2;
+}
+.brand2-bg-4{
+  background: rgba(214, 242, 254, 0.5);
 }
 
 // home 3 background colors
