--- a/assets/sass/components/_course.scss
+++ b/assets/sass/components/_course.scss
@@ -24,7 +24,9 @@
       }
 
       &__thumb {
-        @extend %mb-15, %p-rel, %of-hidden;
+        @extend %mb-15,
+        %p-rel,
+        %of-hidden;
 
         img {
           @extend %w-100;
@@ -37,14 +39,16 @@
         padding-block-end: 20px;
         padding-block-start: 15px;
 
-        @include breakpoint(lg) {
-        }
+        @include breakpoint(lg) {}
 
         &-top {
-          @extend %d-flex, %justify-between, %mb-20;
+          @extend %d-flex,
+          %justify-between,
+          %mb-20;
 
           h4 {
-            @extend %mb-15, %text-clamp-2;
+            @extend %mb-15,
+            %text-clamp-2;
             font-weight: 600;
 
             &:hover {
@@ -61,14 +65,18 @@
         }
 
         &-bottom {
-          @extend %flex, %justify-between, %align-i-center, %mt-15;
+          @extend %flex,
+          %justify-between,
+          %align-i-center,
+          %mt-15;
 
           &--border {
             border-top: 1px solid rgba($brand-color-1, $alpha: 0.1);
           }
 
           .course-price {
-            @extend %flex, %align-i-center;
+            @extend %flex,
+            %align-i-center;
             gap: 5px;
 
             del {
@@ -98,7 +106,7 @@
           padding: 0.15rem 1rem;
           border-radius: 50px;
           color: $brand-color-1;
-          font-weight: 400;
+          font-weight: 500;
           text-transform: capitalize;
           // background-color: rgba($brand-color-1, $alpha: .1);
 
@@ -132,7 +140,10 @@
       }
 
       &__view {
-        @extend %flex, %justify-between, %align-i-center, %mb-30;
+        @extend %flex,
+        %justify-between,
+        %align-i-center,
+        %mb-30;
         gap: 20px;
 
         &-count {
@@ -209,7 +220,8 @@
 
       &__focus {
         &-inner {
-          @extend %d-inline-flex, %align-i-center;
+          @extend %d-inline-flex,
+          %align-i-center;
 
           img {
             @extend %mx-5;
@@ -218,29 +230,20 @@
       }
 
       &__topbar {
-        @extend %d-flex, %align-i-center;
-        gap: 30px;
+        @extend %d-flex,
+        %align-i-center,
+        %justify-between;
 
         &-left {
-          .select {
-            @extend %p-rel, %d-flex;
-            width: 12em;
-            height: 4em;
+          .form-select {
             border-radius: 50px;
+            padding: 18px 24px;
+            width: 160px;
           }
 
-          .select::after {
-            @extend %p-abs, %pos-center;
-            top: 0;
-            right: 0;
-            padding: 0 2em;
-            cursor: pointer;
-            pointer-events: none;
-            transition: 0.25s all ease;
-          }
-
-          .select:focus-visible {
+          .form-select:focus {
             outline: 0;
+            box-shadow: none;
             border: 1px solid rgba($brand-color-1, $alpha: 0.7);
           }
 
@@ -260,7 +263,8 @@
             @extend %justify-evenly;
 
             li {
-              @extend %d-inline-grid, %align-i-center;
+              @extend %d-inline-grid,
+              %align-i-center;
 
               &:not(:last-child) {
                 @extend %me-10;
@@ -280,6 +284,12 @@
           }
         }
       }
+
+      &__wrapper {
+        .tab-content {
+          @extend %mt-65;
+        }
+      }
     }
   }
 
@@ -293,7 +303,8 @@
       }
 
       &__thumb {
-        @extend %p-25, %p-rel;
+        @extend %p-25,
+        %p-rel;
 
         &-inner {
           @extend %of-hidden;
@@ -343,7 +354,11 @@
       }
 
       &__content {
-        @extend %d-flex, %align-i-center, %justify-between, %px-25, %pb-30;
+        @extend %d-flex,
+        %align-i-center,
+        %justify-between,
+        %px-25,
+        %pb-30;
 
         &-details {
           p {
@@ -353,20 +368,29 @@
           }
 
           h6 {
-            @extend %mb-10;
-            font-weight: 600;
-            transition: $transition;
 
-            &:hover {
-              color: $secondary-color-2;
-              text-decoration: underline;
+
+
+            a {
+              @extend %mb-10,
+              %text-clamp-1;
+              font-weight: 600;
+              transition: $transition;
+              max-inline-size: 16ch;
+
+              &:hover {
+                color: $secondary-color-2;
+                text-decoration: underline;
+              }
             }
+
           }
         }
 
         &-price {
           h6 {
-            @extend %px-15, %py-5;
+            @extend %px-15,
+            %py-5;
             font-weight: 600;
             background-color: $brand2-bg-1;
             border-radius: 8px;
@@ -375,7 +399,8 @@
       }
 
       &__focus {
-        @extend %d-inline-flex, %align-i-center;
+        @extend %d-inline-flex,
+        %align-i-center;
 
         img {
           @extend %mx-5;
@@ -396,7 +421,8 @@
           @extend %justify-evenly;
 
           li {
-            @extend %d-inline-grid, %align-i-center;
+            @extend %d-inline-grid,
+            %align-i-center;
 
             &:not(:last-child) {
               @extend %me-10;
@@ -434,7 +460,8 @@
       }
 
       &__thumb {
-        @extend %mb-15, %of-hidden;
+        @extend %mb-15,
+        %of-hidden;
 
         img {
           @extend %w-100;
@@ -447,14 +474,16 @@
         padding-block-end: 20px;
         padding-block-start: 15px;
 
-        @include breakpoint(lg) {
-        }
+        @include breakpoint(lg) {}
 
         &-top {
-          @extend %d-flex, %justify-between, %mb-20;
+          @extend %d-flex,
+          %justify-between,
+          %mb-20;
 
           h4 {
-            @extend %mb-15, %text-clamp-2;
+            @extend %mb-15,
+            %text-clamp-2;
             font-weight: 600;
 
             &:hover {
@@ -466,12 +495,16 @@
         }
 
         h6 {
-          @extend %text-clamp-2, %mb-20;
+          @extend %text-clamp-2,
+          %mb-20;
           font-weight: 600;
         }
 
         &-bottom {
-          @extend %d-flex, %justify-between, %align-i-center, %pt-10;
+          @extend %d-flex,
+          %justify-between,
+          %align-i-center,
+          %pt-10;
 
           &--border {
             border-top: 1px solid rgba($brand-color-1, $alpha: 0.1);
@@ -504,7 +537,8 @@
       }
 
       &__focus {
-        @extend %d-inline-flex, %align-i-center;
+        @extend %d-inline-flex,
+        %align-i-center;
         gap: 5px;
 
         svg {
@@ -513,8 +547,10 @@
       }
 
       &__price {
-        > p {
-          @extend %text-semibold, %px-10, %py-5;
+        >p {
+          @extend %text-semibold,
+          %px-10,
+          %py-5;
           @include font-size(20px);
           font-family: $title-font;
           background-color: $brand3-bg-2;
@@ -523,7 +559,8 @@
       }
 
       &__mentor {
-        @extend %d-flex, %align-i-center;
+        @extend %d-flex,
+        %align-i-center;
         gap: 8px;
       }
     }
@@ -554,7 +591,9 @@
       }
 
       &__thumb {
-        @extend %mb-15, %p-rel, %of-hidden;
+        @extend %mb-15,
+        %p-rel,
+        %of-hidden;
 
         img {
           @extend %w-100;
@@ -564,7 +603,8 @@
 
       &__author {
         a {
-          @extend %d-inline-flex, %align-i-center;
+          @extend %d-inline-flex,
+          %align-i-center;
           gap: 10px;
         }
       }
@@ -575,10 +615,13 @@
         padding-block-start: 15px;
 
         &-top {
-          @extend %d-flex, %justify-between, %mb-20;
+          @extend %d-flex,
+          %justify-between,
+          %mb-20;
 
           h4 {
-            @extend %mb-15, %text-clamp-2;
+            @extend %mb-15,
+            %text-clamp-2;
             font-weight: 600;
 
             &:hover {
@@ -597,7 +640,8 @@
           @include font-size(16px);
           font-weight: 700;
           color: $brand-color-4;
-          @extend %d-inline-flex, %align-i-center;
+          @extend %d-inline-flex,
+          %align-i-center;
           gap: 6px;
           cursor: pointer;
 
@@ -631,7 +675,8 @@
           }
 
           span {
-            @extend %d-inline-flex, %align-i-center;
+            @extend %d-inline-flex,
+            %align-i-center;
 
             @include breakpoint(sm) {
               gap: 10px;
