--- a/assets/sass/components/_feature.scss
+++ b/assets/sass/components/_feature.scss
@@ -1,59 +1,37 @@
 .feature {
-  &__nav {
-    .nav {
-      gap: 20px;
-    }
-
-    .nav-link {
-      cursor: pointer;
-      background-color: rgba($secondary-color, $alpha: .03);
-      padding: 1rem;
-
-      &.active {
-        background-color: rgba($secondary-color, $alpha: .20);
-
-        &:hover {
-          background-color: rgba($secondary-color, $alpha: .20);
-
-        }
-      }
-
-      &:hover {
-        background-color: rgba($secondary-color, $alpha: .06);
-      }
-    }
-  }
-
+  background-color: $brand1-bg-2;
 
   &__item {
     &-inner {
-      @extend %flex;
-      gap: 20px;
+      background-color: $white-color;
+      border-radius: 25px;
+    }
+  }
+
+  &__thumb {
+    @extend %of-hidden;
+    object-fit: cover;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+
+    img {
+      @extend %w-100;
+      @include add-prefix(transition, $transition);
+
     }
 
-    &-icon {
-      @include box(60px);
-    }
-
-    &-content {
-      @extend %text-left;
-      flex: 1;
-
-      h4 {
-        @extend %mb-10;
-        font-weight: 500;
-      }
-
-      p {
-        @extend %mb-0;
-        color: $body-color;
+    &:hover {
+      img {
+        @include add-prefix(transform, scale(1.05));
       }
     }
   }
 
   &__content {
-    @include breakpoint(lg) {
-      padding-inline-start: 2rem;
+    @extend %p-25;
+
+    p {
+      color: $text-color;
     }
   }
 }
