--- a/assets/sass/components/_gallery.scss
+++ b/assets/sass/components/_gallery.scss
@@ -1,15 +1,69 @@
-.gallery{
+.gallery {
     @extend %of-hidden;
-    &__wrapper{
-        img{
-            width: 100%;
-        }
-        a{
-            @extend %mt-40, %justify-center;
 
-            @include breakpoint(lg){
-                margin-top: 80px;
+    &__wrapper {
+        // img {
+        //     width: 100%;
+        // }
+
+
+    }
+
+    &__item {
+
+        @extend %mt-40,
+        %justify-center;
+        @extend %p-rel;
+
+        @include breakpoint(lg) {
+            margin-top: 80px;
+        }
+
+
+        &::before {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            margin-top: -13px;
+            margin-left: -13px;
+            opacity: 0;
+            color: $black-color;
+            font-size: 26px;
+            font-family: 'FontAwesome';
+            content: '\f002';
+            pointer-events: none;
+            z-index: 9000;
+            transition: 0.4s;
+        }
+
+        &::after {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+            // background-color: rgba(46, 132, 206, 0.7);
+            content: '';
+            transition: 0.4s;
+        }
+
+        &:hover {
+            &:after {
+                opacity: 1;
+                z-index: +1;
+            }
+
+            &:before {
+                opacity: 1;
+                z-index: +1;
+            }
+
+            img {
+                transition: 0.4s;
+                opacity: 0.5;
             }
         }
+
     }
 }
