--- a/assets/sass/components/_newsletter.scss
+++ b/assets/sass/components/_newsletter.scss
@@ -49,8 +49,10 @@
                         border-top-left-radius: 50px;
                         border-bottom-left-radius: 50px;
                         z-index: 1;
+                        background-color: $white-color;
+                        border-color: $white-color;
 
-                        ::placeholder{
+                        &::placeholder{
                             color: #98A2B3;
                         }
                     }
